--- a/casa-verde/public/index.html
+++ b/casa-verde/public/index.html
@@ -13,8 +13,10 @@
 
     <!-- Inter Font -->
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>React App</title>
+    <title>Casa Verde</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
